Improve performance and doc for State API
1. Use better algorithm to better utilize message size
2. Shorten participant ID to save message size
3. Add official documentation on API
4. Rename functions and polish comments to be consistent with the doc
5. Bump to v 1.0.3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spark-state",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "src/state.js",
   "scripts": {
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/facebookincubator/spark-state#readme",
   "dependencies": {
-    "Automerge": "facebookincubator/automerge#e21f48ccc67a58c1f944ec1f223c0336a1bfa0d4"
+    "Automerge": "facebookincubator/automerge#81266592fa9f5f5b8ec0c57b3cf2f1c3d79e4dde",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
